<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.PokeDetailFragment">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/search_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="16dp"
        android:hint="@string/search_hint">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/search_poke"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="text"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/search_button"
        android:layout_width="50dp"
        android:layout_height="65dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/search_text"
        app:layout_constraintBottom_toBottomOf="@+id/search_text"
        app:icon="@drawable/ic_baseline_search_24"
        app:iconGravity="textStart"
        app:iconPadding="0dp"
        android:paddingStart="4dp"
        android:paddingEnd="4dp"/>

    <ImageView
        android:id="@+id/poke_image"
        android:layout_width="180dp"
        android:layout_height="180dp"
        app:layout_constraintTop_toTopOf="@+id/search_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:src="@drawable/ic_baseline_search_24"/>

    <TextView
        android:id="@+id/poke_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/poke_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        tools:text="@string/sample_number"/>

    <TextView
        android:id="@+id/poke_weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/poke_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
        tools:text="@string/poke_weight"/>

    <TextView
        android:id="@+id/poke_height"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/poke_weight"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
        tools:text="@string/poke_height"/>

    <TextView
        android:id="@+id/poke_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/poke_height"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
        tools:text="@string/poke_type" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/gender_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="80dp"
        android:text="@string/gender_button_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:visibility="invisible"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/next_button"
        android:layout_marginBottom="40dp"
        android:text="@string/back_button_text"
        android:visibility="invisible"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/next_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/back_button"
        app:layout_constraintStart_toEndOf="@+id/back_button"
        android:text="@string/next_button_text"
        android:visibility="invisible"/>

</androidx.constraintlayout.widget.ConstraintLayout>